--- a/src/notebooks/project_resume.ipynb
+++ b/src/notebooks/project_resume.ipynb
@@ -7136,7 +7136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
